<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/parent_view"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context="com.knyaz.testtask.screen.video_details.VideoDetailsFragment">

    <cn.jzvd.JZVideoPlayerStandard
        android:id="@+id/view_video"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/txt_video_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/formatted_video_name"/>

            <TextView
                android:id="@+id/txt_author_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/formatted_author_name"/>

            <TextView
                android:id="@+id/txt_posted_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/formatted_posted_date"/>

            <com.knyaz.testtask.base.ui.views.EllipsizingTextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                tools:text="@string/switch_rv_mode"/>

            <TextView
                android:id="@+id/txt_view_comments_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/comments"
                android:textStyle="bold"
                android:visibility="invisible"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/comments_rview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>